--- a/src/client/public/index.html
+++ b/src/client/public/index.html
@@ -1,10 +1,13 @@
 <!doctype html>
 <html>
-  <head>
-    <title>Hello World App</title>
-  </head>
-  <body>
-    <main id="root"></main>
-    <script src="./index.tsx"></script>
-  </body>
+
+<head>
+  <title>Hello World App</title>
+</head>
+
+<body>
+  <main id="root"></main>
+  <script src="../index.tsx"></script>
+</body>
+
 </html>
